welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:3: error: reassignment to val
  	speed = speed - 5
              ^caughtSpeeding:5: error: not found: value <=
    case speed <= 60 => return 0
               ^caughtSpeeding:6: error: not found: value <=
    case speed <= 80 => return 1
               ^caughtSpeeding:7: error: not found: value >
    case speed > 80 => return 2
               ^